# HPC-Learning-Notes

./: README.md
Model Pruning/: notes.ipynb
Model Quantization/: notes.ipynb
Model_Distilling/: Notes.md
Model_Distilling/examples/: ResNet.py  ResNet18.py  ResNet50.py  result.md  train.py
Model_Quantization/: Notes.md
Model_Quantization/examples/: train.py
c++/: CMakeLists.txt  Notes.md
c++/openMP/factorial_case/: barrier.cc  critical.cc  nested.cc
c++/openMP/simple_ex/: arraysum.cc  for.cc  master.cc  ordered.cc  parallel_for.cc  sections.cc  simple_test.cc  single.cc  timeclock.h
c++/template/: examples.cc  numComputing.cc
底层编译器/llvm/K_language/: llvmtest.cpp  test.cpp  test4.cpp
底层编译器/llvm/W_language/: front_end.cpp  temp.cpp  wchar.cpp
异构编程/cuda/cuda经典面试问题/: Multi_Ele.cu  NaiveGEMM.cu  PartitionMatrix.cu  cublasGEMM.cu  reduce.cu  test.cc
推理框架/onnx/onnx_tutorial/: Function_Model.py  IF_Model.ipynb  NaiveModel.ipynb  Pytorch2ONNX.py  SCAN_Model.py  knnr.onnx  linear_regression.onnx  onnx_if_sign.onnx
模型剪枝/: Notes.md
模型剪枝/examples/: prune.py
模型并行训练/: Notes.md
模型部署/: Notes.md
模型部署/TVM/: tvm_test.py
模型部署/TVM/tvm_toturial/: 2.ipynb  3.ipynb  5.ipynb  8.ipynb  (+3 more)
模型部署/TensorRT/tensorrt_samples/: CMakeLists.txt
模型部署/TensorRT/tensorrt_samples/samples/: sampleEngines.cpp
模型部署/TensorRT/tensorrt_toturial/: CMakeLists.txt
模型部署/TensorRT/tensorrt_toturial/chap3/: build_phase.cc  deserialized.cu
模型部署/TensorRT/tensorrt_toturial/chap6/: Refitting_An_Engine.cc  The_Timing_Cache.cc
模型量化/: Notes.md
混合编程/pybind11/: example.cpp  test.py
(+46 files in other folders)
